# AuroraBridge

./: Cargo.toml  PROJECT_STRUCTURE.md  QUICKSTART.ps1  README.md
contracts/near-bridge/: Cargo.toml
contracts/near-bridge/src/: lib.rs
contracts/soroban-bridge/: Cargo.toml
contracts/soroban-bridge/src/: lib.rs
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: BridgeInterface.tsx  FreighterCheck.tsx  WalletButton.tsx
frontend/lib/: stellar.ts  store.ts
frontend/pages/: _app.tsx  _document.tsx  diagnostic.tsx  index.tsx  setup.tsx
frontend/styles/: globals.css
relayer/: Cargo.toml
relayer/src/: config.rs  horizon_client.rs  main.rs  near_client.rs
scripts/: deploy-near.ps1  deploy-soroban.ps1  initialize-contract.sh
shared/: Cargo.toml
shared/src/: lib.rs
