[workspace]
members = [
    "contracts/soroban-bridge",
    # "contracts/near-bridge",  # Build separately with `cargo near build`
    "relayer",
    "shared",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.1"

# Soroban
soroban-sdk = "22.0.0"

# NEAR
near-sdk = "5.1.0"
