[package]
name = "bridge-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
serde_with = { version = "3.0", features = ["hex"] }

[features]
default = []
soroban = []
near = []
